# narcis-graphics-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
include/glad/: glad.h
src/: Store.cpp  Store.h  cglfw.cpp  game.cpp  game.h  glad.c  main.cpp  shaders.cpp  shaders.h
src/game/: game.cpp  game.h
src/gl/: shaders.cpp  shaders.h  vertex.glsl
src/lib/: cglfw.cpp  textures.cpp  textures.h
src/nge/: Nge.hpp
src/nge/Engine/: AppEngine.cpp  AppEngine.hpp
src/nge/Models/: Grid.cpp  Grid.hpp  Model.hpp  Point.cpp  Point.hpp
src/nge/Render/: Render.cpp  Render.hpp  Shader.cpp  Shader.hpp
src/nge/Utils/: NoCopy.hpp  NonCopyable.hpp  Types.hpp  Utils.hpp
src/nge/Window/: KeyMap.hpp  Window.cpp  Window.hpp
src/shaders/: coordinate_vs.glsl  fragment.glsl  texture_vs.glsl  vertex.glsl
src/window/: cglfw.h
